--- a/lesson39/react-app/src/scss/style.scss
+++ b/lesson39/react-app/src/scss/style.scss
@@ -5,4 +5,6 @@ $root-color: orange;
   font-weight: bold;
   font-size: 20px;
   padding: 5px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
 }
